# PineVeil

./: .gitignore  CMakeLists.txt  README.md  build.sh  wbuild.bat
assets/models/: cottage_fixed.mtl
assets/shaders/: compile.sh  shader.vert  wcompile.bat
src/: main.cpp  mesh.cpp  mesh.h  pineveil.h  vertex.cpp  vertex.h
